kustomize/skyline/deployment-apiserver.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "skyline"
  namespace: openstack
  labels:
    release_group: skyline
    application: skyline
    component: api
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      application: skyline
      component: api
      release_group: skyline
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        application: skyline
        component: api
        release_group: skyline
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: release_group
                  operator: In
                  values:
                  - skyline
                - key: application
                  operator: In
                  values:
                  - skyline
                - key: component
                  operator: In
                  values:
                  - server
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: enabled
      terminationGracePeriodSeconds: 30
      serviceAccountName: skyline-apiserver
      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: pod-etc-skyline
          emptyDir: {}
        - name: skyline-data
          configMap:
            name: "skyline-integration-properties"
            defaultMode: 0555
      containers:
        - name: skyline-apiserver
          image: "docker.io/99cloud/skyline:latest"
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "0.25"
              memory: "128Mi"
          command:
            - bash
            - -c
            - /tmp/run.sh
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: pod-etc-skyline
              mountPath: /etc/skyline
            - name: skyline-data
              mountPath: /etc/skyline/gunicorn.py
              subPath: data-gunicorn.py
              readOnly: true
            - name: skyline-data
              mountPath: /tmp/run.sh
              subPath: data-skyline-run.sh
              readOnly: true
