kustomize/skyline/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: skyline-apiserver
spec:
  ports:
    - name: s-apiserver
      port: 9999
  selector:
    release_group: skyline
    application: skyline
    component: api
---
apiVersion: v1
kind: Service
metadata:
  name: skyline
spec:
  ports:
    - name: http
      port: 80
    - name: https
      port: 443
  selector:
    app: ingress-api
