kustomize/skyline/ingress-apiserver.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skyline
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
    - host: skyline
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: skyline-apiserver
                port:
                  name: "s-apiserver"
    - host: skyline.openstack
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: skyline-apiserver
                port:
                  name: "s-apiserver"
    - host: skyline.openstack.svc.cluster.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: skyline-apiserver
                port:
                  name: "s-apiserver"
